--- a/index.html
+++ b/index.html
@@ -96,6 +96,11 @@
 			font-family: inherit;
 			background-color: var(--container-bg);
 			color: var(--text-color);
+		}.
+		/* Add this to your existing CSS */
+		textarea:focus {
+			background-color: var(--container-bg);
+			outline-color: var(--border-color);
 		}
 		.settings {
 			background-color: var(--settings-bg);
