--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
 			</div>
 			<div class="setting">
 				<input type="checkbox" id="useContractions">
-				<label for="useContractions">Use Contractions</label>
+				<label for="useContractions">Use Contractions checked</label>
 			</div>
 		</div>
 
