--- a/index.html
+++ b/index.html
@@ -342,12 +342,12 @@
 		<div class="settings">
 			<div class="settings-header">Settings</div>
 			<div class="setting">
-				<input type="checkbox" id="ignoreDiacritics">
+				<input type="checkbox" id="ignoreDiacritics" checked>
 				<label for="ignoreDiacritics">Ignore Diacritics</label>
 			</div>
 			<div class="setting">
 				<input type="checkbox" id="useContractions">
-				<label for="useContractions">Use Contractions checked</label>
+				<label for="useContractions">Use Contractions</label>
 			</div>
 		</div>
 
