--- a/index.html
+++ b/index.html
@@ -342,11 +342,11 @@
 		<div class="settings">
 			<div class="settings-header">Settings</div>
 			<div class="setting">
-				<input type="checkbox" id="ignoreDiacritics" checked>
+				<input type="checkbox" id="ignoreDiacritics">
 				<label for="ignoreDiacritics">Ignore Diacritics</label>
 			</div>
 			<div class="setting">
-				<input type="checkbox" id="useContractions">
+				<input type="checkbox" id="useContractions" checked>
 				<label for="useContractions">Use Contractions</label>
 			</div>
 		</div>
