--- a/index.html
+++ b/index.html
@@ -324,6 +324,23 @@
 		.mode-icon {
 			font-size: 20px;
 		}
+            /* Add these CSS rules to your existing styles */
+    @media (max-width: 768px) {
+        h1 {
+            text-align: left;
+            font-size: 1.5rem; /* Smaller size on mobile */
+            margin-bottom: 10px;
+            margin-right: 90px; /* Make space for the toggle switch */
+        }
+
+        .dark-mode-toggle {
+            top: 30px; /* Align with the title */
+        }
+
+        .container {
+            padding: 15px; /* Slightly reduce padding on mobile */
+        }
+    }
 	</style>
 </head>
 <body>
