--- a/index.html
+++ b/index.html
@@ -1112,46 +1112,9 @@
 			}
 		}
 
-		// Proper UTF-8 base64 decoding function
-		function base64ToUtf8(base64) {
-			try {
-				// First decode base64 to binary string
-				const binaryString = atob(base64);
-				// Then convert binary string to UTF-8
-				const bytes = new Uint8Array(binaryString.length);
-				for (let i = 0; i < binaryString.length; i++) {
-					bytes[i] = binaryString.charCodeAt(i);
-				}
-				// Use TextDecoder for proper UTF-8 decoding
-				const decoder = new TextDecoder('utf-8');
-				return decoder.decode(bytes);
-			} catch (error) {
-				throw new Error(`Failed to decode UTF-8 content: ${error.message}`);
-			}
-		}
-
-		// Proper UTF-8 to base64 encoding function
-		function utf8ToBase64(text) {
-			try {
-				// Use TextEncoder for proper UTF-8 encoding
-				const encoder = new TextEncoder();
-				const bytes = encoder.encode(text);
-				// Convert to binary string
-				let binaryString = '';
-				for (let i = 0; i < bytes.length; i++) {
-					binaryString += String.fromCharCode(bytes[i]);
-				}
-				// Then encode to base64
-				return btoa(binaryString);
-			} catch (error) {
-				throw new Error(`Failed to encode UTF-8 content: ${error.message}`);
-			}
-		}
-
 		async function updateDictionaryOnGitHub(newContent, currentSha) {
 			try {
-				const jsonString = JSON.stringify(newContent, null, 2);
-				const base64Content = utf8ToBase64(jsonString);
+				const base64Content = btoa(JSON.stringify(newContent, null, 2));
 				
 				const response = await fetch('https://api.github.com/repos/AltoneInteractive/AltoneInteractive.github.io/contents/dictionary.json', {
 					method: 'PUT',
@@ -2171,9 +2134,12 @@
 			dictionaryStatus.textContent = "Checking for changes...";
 
 			try {
-				// Fetch current dictionary from GitHub
+				// Fetch current dictionary from GitHub API (for SHA and comparison)
 				const githubDict = await fetchCurrentDictionary();
-				const githubContent = JSON.parse(base64ToUtf8(githubDict.content));
+				
+				// But also fetch the actual content directly to avoid encoding issues
+				const directResponse = await fetch('dictionary.json');
+				const githubContent = await directResponse.json();
 
 				// Prepare local dictionary for comparison (exact same format as GitHub)
 				const localContent = {
