--- a/index.html
+++ b/index.html
@@ -386,13 +386,28 @@
 			font-weight: bold;
 			margin-bottom: 10px;
 		}
+		.settings-grid {
+			display: grid;
+			grid-template-rows: repeat(2, 1fr);
+			grid-auto-flow: column;
+			grid-auto-columns: max-content;
+			gap: 10px 20px;
+		}
 		.setting {
-			margin-bottom: 10px;
 			display: flex;
 			align-items: center;
 		}
 		.setting label {
 			margin-left: 8px;
+		}
+		
+		/* Dev-only settings */
+		.dev-only-setting {
+			display: none;
+		}
+		
+		.dev-mode .dev-only-setting {
+			display: flex;
 		}
 		.dictionary-controls {
 			margin-top: 20px;
@@ -746,13 +761,19 @@
 
 		<div class="settings">
 			<div class="settings-header">Settings</div>
-			<div class="setting">
-				<input type="checkbox" id="ignoreDiacritics">
-				<label for="ignoreDiacritics">Ignore Diacritics</label>
-			</div>
-			<div class="setting">
-				<input type="checkbox" id="useContractions" checked>
-				<label for="useContractions">Use Contractions</label>
+			<div class="settings-grid">
+				<div class="setting">
+					<input type="checkbox" id="ignoreDiacritics">
+					<label for="ignoreDiacritics">Ignore Diacritics</label>
+				</div>
+				<div class="setting">
+					<input type="checkbox" id="useContractions" checked>
+					<label for="useContractions">Use Contractions</label>
+				</div>
+				<div class="setting dev-only-setting">
+					<input type="checkbox" id="forceSync">
+					<label for="forceSync">Force Sync</label>
+				</div>
 			</div>
 		</div>
 
@@ -860,6 +881,7 @@
 		const ichrolicOutput = document.getElementById('ichrolicOutput');
 		const ignoreDiacriticsCheckbox = document.getElementById('ignoreDiacritics');
 		const useContractionsCheckbox = document.getElementById('useContractions');
+		const forceSyncCheckbox = document.getElementById('forceSync');
 		const saveDictionaryButton = document.getElementById('saveDictionary');
 		const showDictionaryButton = document.getElementById('showDictionary');
 		const dictionaryStatus = document.getElementById('dictionaryStatus');
@@ -958,6 +980,9 @@
 			pageTitle.classList.add('dev-mode');
 			devMenuToggle.classList.add('dev-mode');
 			
+			// Add dev mode class to container to show dev-only settings
+			document.querySelector('.container').classList.add('dev-mode');
+			
 			// Change title based on screen size
 			updateDeveloperTitle();
 			
@@ -986,6 +1011,7 @@
 			// Remove dev mode classes
 			pageTitle.classList.remove('dev-mode');
 			devMenuToggle.classList.remove('dev-mode');
+			document.querySelector('.container').classList.remove('dev-mode');
 			
 			// Revert title
 			pageTitle.textContent = 'Ichrolic Translator';
@@ -2234,6 +2260,8 @@
 
 				if (githubDictCount !== localDictCount || githubSynCount !== localSynCount) {
 					console.log('Count mismatch detected - updating...');
+				} else if (forceSyncCheckbox.checked) {
+					console.log('Force sync enabled - updating...');
 				} else {
 					// Counts match, do deep comparison with proper UTF-8
 					const normalizeForComparison = (obj) => JSON.stringify(obj, Object.keys(obj).sort());
