--- a/index.html
+++ b/index.html
@@ -1220,12 +1220,14 @@
 				font-size: 16px;
 				padding: 10px;
 				line-height: 1.4;
-				white-space: pre-wrap;
+				white-space: normal;
+				word-wrap: break-word;
 				overflow: hidden;
 				background: transparent;
 				border: none;
 				resize: none;
 				box-sizing: border-box;
+				z-index: 10;
 			`;
 			
 			// Parse text and create interactive elements
